# neural-planes

./: README.md
archdata/: archive.py  archive_data.py  conf_parser.py  grid.py  image.py
configs/: archdata_534.config  archdata_sample.config  config_534.json  config_home.json  gendata_534.config  gendata_sample.config
datagen/: image_generator.py  image_handler.py  init_parser.py
datagen/configs/: sample.config
datagen/data samples/: 0000000.xml
datagen/img-overlay/: init_parser.py  overlay.py  overlay_plane.py
datagen/model-render/: CMakeLists.txt  SnapImageDrawCallback.hxx  Utils.hxx  main.cpp  model_render
gendata/: CMakeLists.txt  ImageGenerator.hxx  ModelImage.hxx  SceneLoader.hxx  conf_parser.py  generate.py  generate_data.py  image.py  image_handler.py  main.cxx
gendata/model-render/: SceneHandler.hxx
histories/: history2016-06-04 14:15:52.610132.json  history2016-06-04 20:51:38.823115.json  history2016-06-06 02:42:02.407743.json
net/: loss_function.py  network.py
net.keras/: LossFunctionTest.ipynb  converter.py  data_loader.py  geometry.py  loader.py  network.py  objectives.py
net.keras/objectives/: loss_function.py
net.keras/yolo_loss/: geometry.py  loss_function.py
net.torch/: first.lua
